--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "scss-boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "dev": "gulp dev"
+    "dev": "gulp dev",
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   },
   "type": "module",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/register": "^7.18.9",
-    "del": "^7.0.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/register": "^7.22.15",
+    "del": "^7.1.0",
+    "gh-pages": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
-    "node-sass": "^7.0.1"
+    "node-sass": "^9.0.0"
   },
   "dependencies": {
-    "sass": "^1.54.0"
+    "sass": "^1.69.3"
   }
 }
